@@ -1,3 +1,8 @@
+2005-10-23  Stefan Kamphausen <skampi@gmx.net>
+
+	* slime.el (slime-repl-history-size, slime-repl-history-file): Use
+	defcustom to declare the variables.
+	
 2005-10-23  Gabor Melis  <mega@hotpop.com>
  
 	* swank-backend.lisp (install-debugger-globally): new interface
